--- a/neuefische/journal/src/App.css
+++ b/neuefische/journal/src/App.css
@@ -2,11 +2,7 @@
   text-align: center;
 }
 
-.header {
-  background-color: lightgray;
-}
-
-/* .App-logo {
+.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -39,4 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-} */
+}
